versioned_docs/version-0.20.0/index.mdx
---
sidebar_position: 0
---

import QuickNavigation from "@site/src/components/QuickNavigation";
import { items } from "@site/src/content/cardItems";
import { useVersionedLink } from "@site/src/hooks/useVersionedLink";

# Welcome to Fishjam

<p style={{ fontSize: "1.1rem" }}>
Welcome to the Fishjam documentation!

Learn how to create live video and audio streaming applications with Fishjam, the all-in-one multimedia streaming toolkit.
To get started, we recommend you check out one of the two guides below:

</p>

<QuickNavigation items={items} />

## Tutorials

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Learning-oriented lessons that take you through a series of steps to
      complete a project. Most useful when you want to get started with Fishjam.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li><a href="./tutorials/react-native-quick-start">React Native Quick Start</a></li>
      <li><a href="./tutorials/react-quick-start">React Quick Start</a></li>
      <li><a href="./tutorials/backend-quick-start">Backend Quick Start</a></li>
      <li><a href={useVersionedLink("tutorials")} style={{ fontSize: "1.1rem", fontWeight: "bold" }}>See all →</a></li>
    </ul>

  </div>
</div>

## How-to Guides

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Practical step-by-step guides to help you achieve a specific goal. Most
      useful when you're trying to get something done.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li><a href="./how-to/react-native/installation">React Native Installation and Setup</a></li>
      <li><a href="./how-to/react/installation">React Installation and Setup</a></li>
      <li><a href="./how-to/backend/production-deployment">Backend Production Deployment</a></li>
      <li><a href={useVersionedLink("how-to")} style={{ fontSize: "1.1rem", fontWeight: "bold" }}>See all →</a></li>
    </ul>

  </div>
</div>

## Explanation

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Big-picture explanations of higher-level Fishjam concepts. Most useful for
      building understanding of a particular topic.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li><a href="./explanation/what-is-fishjam">What is Fishjam?</a></li>
      <li><a href="./explanation/architecture">Architecture Overview</a></li>
      <li><a href="./explanation/sandbox-api-concept">Sandbox API</a></li>
      <li><a href={useVersionedLink("explanation")} style={{ fontSize: "1.1rem", fontWeight: "bold" }}>See all →</a></li>
    </ul>

  </div>
</div>

## API Reference

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Nitty-gritty technical descriptions of how Fishjam works. Most useful when
      you need detailed information about Fishjam's APIs.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li><a href="./api/mobile">React Native SDK API</a></li>
      <li><a href="./api/web">React/Web SDK API</a></li>
      <li><a href="./api/server">Server SDK API</a></li>
      <li><a href={useVersionedLink("api")} style={{ fontSize: "1.1rem", fontWeight: "bold" }}>See all →</a></li>
    </ul>

  </div>
</div>

---

**Looking for live examples?** Check out our [Fishjam Chat demo](https://room.fishjam.io/) →
