versioned_docs/version-0.27.0/index.mdx
---
sidebar_position: 0
---

import QuickNavigation from "@site/src/components/QuickNavigation";
import { items } from "@site/src/content/cardItems";
import { useVersionedLink } from "@site/src/hooks/useVersionedLink";

# Welcome to Fishjam

<p style={{ fontSize: "1.1rem" }}>
Welcome to the Fishjam documentation!

Learn how to create live video and audio streaming applications with Fishjam, the all-in-one multimedia streaming toolkit.
To get started, check out one of our guides or browse the examples below:

</p>

<QuickNavigation items={items} />

## Tutorials

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Learning-oriented lessons that take you through a series of steps to
      complete a project. Most useful when you want to get started with Fishjam.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li>[React Native Quick Start](./tutorials/react-native-quick-start.mdx)</li>
      <li>[React Quick Start](./tutorials/react-quick-start.mdx)</li>
      <li>[Backend Quick Start](./tutorials/backend-quick-start.mdx)</li>
      <li><a href={useVersionedLink("tutorials")} style={{ fontSize: "1.1rem", fontWeight: "bold" }}>See all →</a></li>
    </ul>

  </div>
</div>

## How-to Guides

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Practical step-by-step guides to help you achieve a specific goal. Most
      useful when you're trying to get something done.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li>[Web & Mobile Installation](./how-to/client/installation.mdx)</li>
      <li>[Backend Production Deployment](./how-to/backend/production-deployment.mdx)</li>
      <li><a href={useVersionedLink("how-to")} style={{ fontSize: "1.1rem", fontWeight: "bold" }}>See all →</a></li>
    </ul>

  </div>
</div>

## Explanation

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Big-picture explanations of higher-level Fishjam concepts. Most useful for
      building understanding of a particular topic.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li>[What is Fishjam?](./explanation/what-is-fishjam.mdx)</li>
      <li>[Architecture Overview](./explanation/architecture.mdx)</li>
      <li>[Sandbox API](./explanation/sandbox-api-concept.mdx)</li>
      <li><a href={useVersionedLink("explanation")} style={{ fontSize: "1.1rem", fontWeight: "bold" }}>See all →</a></li>
    </ul>

  </div>
</div>

## Examples

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Ready-to-run example applications for web and mobile. Most useful when
      you want to see Fishjam in action or use a project as a starting point.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li>[React Examples](./examples/react.mdx)</li>
      <li>[React Native Examples](./examples/react-native.mdx)</li>
    </ul>

  </div>
</div>

## API Reference

<div
  style={{
    display: "flex",
    justifyContent: "space-between",
    marginBottom: "2rem",
  }}
>
  <div style={{ flex: 1}}>
    <p>
      Nitty-gritty technical descriptions of how Fishjam works. Most useful when
      you need detailed information about Fishjam's APIs.
    </p>

  </div>
    <div style={{ flex: 1, display: "flex", justifyContent: "flex-end" }}>
      <ul style={{ listStyle: "none", textAlign: "right" }}>
      <li>[React Native SDK API](./api/mobile/index.md)</li>
      <li>[React SDK API](./api/web/index.md)</li>
      <li>[Server SDK API](./api/server/index.md)</li>
      <li><a href={useVersionedLink("api")} style={{ fontSize: "1.1rem", fontWeight: "bold" }}>See all →</a></li>
    </ul>

  </div>
</div>

---

**Looking for live examples?** Check out our [Fishjam Chat demo](https://room.fishjam.io/) →
